# Koge29_H8-3069F_Emulator

./: .gitattributes  .gitignore  Cargo.toml  README.md  print.dump  printf.2.dump
.github/workflows/: release.yml  test.yml
example/: example1.elf  example2.elf  example3.elf  one.c  one.elf  printf.c  printf.elf
src/: bus.rs  cpu.rs  elf.rs  main.rs  mcu.rs  memory.rs  modules.rs  new_socket.rs  registers.rs  setting.rs  socket.rs
src/cpu/: addressing_mode.rs  instruction.rs  interrupt_controller.rs  messages.rs  testhelper.rs
src/cpu/addressing_mode/: abs.rs  dec_ern.rs  disp.rs  ern.rs  inc_ern.rs  mem_indirect.rs  pc.rs  rn.rs
src/cpu/instruction/: add_b.rs  add_l.rs  add_w.rs  adds.rs  addx.rs  and.rs  band.rs  bcc.rs  bclr.rs  biand.rs  bild.rs  bior.rs  bist.rs  bixor.rs  bld.rs  bnot.rs  bor.rs  bset.rs  bsr.rs  bst.rs  btst.rs  bxor.rs  cmp_b.rs  cmp_l.rs  cmp_w.rs  dec.rs  divxu.rs  extu.rs  inc.rs  jmp.rs  jsr.rs  mov_b.rs  mov_l.rs  mov_w.rs  mulxu.rs  neg.rs  not.rs  or.rs  rotl.rs  rotr.rs  (+15 more)
src/elf/: header.rs  parse_header.rs  parse_program_header.rs  parse_section.rs  parse_symtab.rs  program_header.rs  section.rs  string_table.rs  symtab.rs
src/modules/: ioport.rs  timer8.rs
