[package]
name = "koge29_h8-3069f_emulator"
version = "0.1.1"
edition = "2021"

[dependencies]
spin_sleep_tokio = { git = "https://github.com/Kogepan229/spin-sleep-tokio" }
tokio = { version = "1.32.0", features = ["full"] }
nom = "7"
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "4.4.2", features = ["derive"] }
