[package]
name = "koge29_h8-3069f_emulator"
version = "0.5.0"
edition = "2021"

[dependencies]
spin_sleep_tokio = { git = "https://github.com/Kogepan229/spin-sleep-tokio" }
tokio = { version = "1.42", features = ["full"] }
nom = "7.1.3"
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
